Tweaking to try to not get so much garbage

--- a/stack.yml
+++ b/stack.yml
@@ -2,25 +2,27 @@ version: "3.8"
 
 services:
   pdf-watcher:
-    image: polyhydra/poppler-watcher:1.0
+    image: polyhydra/poppler-watcher:1.2
     volumes:
       - /volume1/docker/pdf:/work
     environment:
-      # Folder layout under /work:
-      #   /work/in        <- drop PDFs here
-      #   /work/out       <- extracted images go here
-      #   /work/archive   <- processed PDFs moved here
-      #   /work/failed    <- PDFs that error move here
       - INPUT_DIR=/work/in
       - OUTPUT_DIR=/work/out
       - ARCHIVE_DIR=/work/archive
       - FAILED_DIR=/work/failed
-      # How long to wait after last write before processing (seconds)
       - STABLE_SECONDS=2
-      # Extract mode:
-      #   images  -> pdfimages -all (extract embedded images)
-      #   pages   -> pdftoppm -png  (render each page to images)
-      - MODE=images
+
+      # Do both: clean page renders + organized raw assets
+      - MODE=both
+      - RENDERER=pdftocairo
+      - DPI=300
+
+      # Filtering / bucketing for extracted assets:
+      - MIN_W=32
+      - MIN_H=32
+      - MIN_PIXELS=10000
+      - BLANK_MAX_NONWHITE_PCT=0.5
+
     deploy:
       mode: replicated
       replicas: 1
@@ -28,8 +30,8 @@ services:
         condition: on-failure
         delay: 3s
         max_attempts: 10
-      # IMPORTANT: If /volume1 exists only on a specific Swarm node,
-      # pin this service to that node. Replace "nas-node" with your node hostname.
+
+      # If /volume1 exists only on a specific Swarm node, pin it:
       # placement:
       #   constraints:
       #     - node.hostname == nas-node
